@@ -5,13 +5,13 @@ try:
 	shared_info.devices[shared_info.drive_to_partition].do_recommended()
 except GLIException, error:
 	shared_info.error_message = error.get_error_msg()
-redirect("/webgli/partitioning2.pyhtml?editdrive=" + shared_info.drive_to_partition)
+self.redirect("/webgli/partitioning2.pyhtml?editdrive=" + shared_info.drive_to_partition)
 ?>
 <: elif 'cleardrive' in post_params:
 <?
 shared_info.devices[shared_info.drive_to_partition].clear_partitions()
 shared_info.error_message = "Partition table cleared successfully"
-redirect("/webgli/partitioning2.pyhtml?editdrive=" + shared_info.drive_to_partition)
+self.redirect("/webgli/partitioning2.pyhtml?editdrive=" + shared_info.drive_to_partition)
 ?>
 <: else:
 <?
