@@ -15,22 +15,22 @@ if not editpart == -1:
 if post_params["DelPartition"] == "DELETE PARTITION" or post_params["Cancel"] == "Cancel":
 	if post_params["DelPartition"] == "DELETE PARTITION":
 		shared_info.devices[drive_to_partition].remove_partition(editpart)
-	redirect("/webgli/partitioning2.pyhtml?editdrive=" + drive_to_partition)
+	self.redirect("/webgli/partitioning2.pyhtml?editdrive=" + drive_to_partition)
 elif editpart == -1 or tmppart.get_type() == "free":
 	if not int(post_params['size']):
 		print "ERROR: you must specify a size in MB"
 #		return wrap_in_webgli_template(data)
 	else:
 		new_minor = shared_info.devices[drive_to_partition].add_partition(editpart, int(post_params['size']), 0, 0, post_params['filesystem'])
-		redirect("/webgli/partitioning3.pyhtml?editpart=" + str(int(new_minor)))
+		self.redirect("/webgli/partitioning3.pyhtml?editpart=" + str(int(new_minor)))
 else:
 	tmppart = tmpparts[editpart]
 	tmppart.set_format(post_params['format'])
 	tmppart.set_mkfsopts(post_params['fsopts'])
 	tmppart.set_mountopts(post_params['mountopts'])
 	tmppart.set_mountpoint(post_params['mountpoint'])
-	redirect("/webgli/partitioning2.pyhtml?editdrive=" + drive_to_partition)
-
-include /webgli/bottom.pyhtml
+	self.redirect("/webgli/partitioning2.pyhtml?editdrive=" + drive_to_partition)
 ?>
 :>
+<? include /webgli/bottom.pyhtml ?>
+
