@@ -1,9 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.535 2005/12/18 23:34:19 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.536 2005/12/21 02:11:02 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
+
+  20 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
+  src/net/server/gliserv.py:
+  wrap generated code in a class to isolate it a bit better
+  302 redirects work
 
   18 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIClientController.py:
